Sat Nov 24 12:12:25 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* **/*.java: 1d, 2d and 3d XML file names are hardcoded, so define
	them into JCAEXMLData.java and remove xml file name from mesh readers
	and writers.
	* src/org/jcae/mesh/xmldata/MeshWriter.java (writeObject3D): If 
	brepFile is null, do not write <shape> element.

Fri Nov 23 11:10:14 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/Mesher.java: Copy CAD file into output directory.
	Output directory is then consistent and can be moved or copied into
	into another location.
	* src/org/jcae/mesh/xmldata/MMesh1DWriter.java
	  src/org/jcae/mesh/xmldata/MeshWriter.java: Remove brep directory
	from arguments of writeObject() and writeObject3D() methods.
	* src/org/jcae/mesh/amibe/ds/Mesh.java (buildAdjacency): Disable
	ridge detection, it is broken.

Thu Nov 22 23:22:30 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/Mesher.java: Move detection of invalid CAD faces
	into src/org/jcae/mesh/amibe/algos2d/Initial.java

Thu Nov 22 12:37:13 CET 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/patch/Calculus.java (distance2): Modify
	signature, this may be needed to improve SmoothNodes2D.
	* src/org/jcae/mesh/amibe/patch/Mesh2D.java: Rename getQuadTree()...
	* src/org/jcae/mesh/amibe/ds/Mesh.java: into getKdTree()...
	* src/org/jcae/mesh/amibe/patch/Mesh2D.java: Rename resetQuadTree()...
	* src/org/jcae/mesh/amibe/ds/Mesh.java: into resetKdTree()...
	* src/org/jcae/mesh/amibe/ds/MMesh1D.java: Remove maxLength and
	maxDeflection members, mesh specifications are now passed to 1D
	algorithms through a Map.
	* src/org/jcae/mesh/amibe/ds/MeshParameters.java: New class, this is
	a container for mesh parameters.  Static members have been removed
	from Mesh, Metric2D and Metric3D classes and gathered into this one.

Thu Nov 22 10:53:13 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
